test/ui/tests/fail/class-method-missing-self.rs
struct Example;

#[neon::class]
impl Example {
    fn method() {}
}

fn main() {}
