test/ui/tests/fail/class-method-missing-self.stderr
error: Class methods must have a `self` receiver (`&self` or `&mut self`) as their first parameter
 --> tests/fail/class-method-missing-self.rs:5:8
  |
5 |     fn method() {}
  |        ^^^^^^

error[E0277]: the trait bound `Example: Default` is not satisfied
 --> tests/fail/class-method-missing-self.rs:3:1
  |
3 | #[neon::class]
  | ^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Example`
  |
  = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Example` with `#[derive(Default)]`
  |
1 + #[derive(Default)]
2 | struct Example;
  |
